<resources>
    <string name="app_name">MovieApp</string>

    <!--    The Movie Database    -->
    <string name="tmdb_base_img_url">http://image.tmdb.org/t/p/original%s</string>

    <string name="sort">Sort</string>

    <!-- Category -->
    <string name="category_movies">Movies</string>
    <string name="category_tv_shows">TV Shows</string>
    <string name="category_discover">Discover</string>
    <string name="category_popular_people">Popular people</string>

    <!-- Sort options -->
    <string name="sorting_mode_popular">Popular</string>
    <string name="sorting_mode_top_rated">Top rated</string>
    <string name="sorting_mode_upcoming">Upcoming</string>
    <string name="sorting_mode_now_playing">Now playing</string>
    <string name="sorting_mode_on_tv">On TV</string>
    <string name="sorting_mode_airing_today">Airing today</string>

    <!-- Movie detail Popup -->
    <string name="popup_movie_detail_add_to_watchlist">Watchlist</string>
    <string name="popup_movie_detail_more_info">More info</string>
    <string name="popup_movie_detail_rating">Rating</string>
    <string name="popup_movie_detail_released">Released</string>
    <string name="popup_movie_detail_runtime">Runtime</string>
    <string name="popup_movie_detail_runtime_in_minutes">%dm</string>
    <string name="popup_movie_detail_runtime_in_hours">%dh</string>
    <string name="popup_movie_detail_runtime_in_hours_and_minutes">%dh %dm</string>
    <string name="retry">Retry</string>
    <string name="error">Uh oh, something went wrong.</string>
<<<<<<< HEAD
    <string name="filmography">Filmography</string>
=======
    <string name="profile">Profile</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="tmdb_login">Log in to tmdb</string>
    <string name="login_failed">Login failed</string>
    <string name="userprofile_watchlist">Watchlist</string>
    <string name="userprofile_lists">Lists</string>
    <string name="userprofile_favorites">Favorites</string>
    <string name="userprofile_rated">Rated</string>
    <string name="userprofile_logout">Logout</string>
    <string name="userprofile_confirm_logout">Confirm logout?</string>
    <string name="cast">Cast</string>
>>>>>>> origin/master
</resources>
