<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup_window"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/userprofilepopup_header"
        android:layout_width="@dimen/popupwindow_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing12"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/moviedetailpopup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/spacing16"
            android:layout_marginStart="@dimen/spacing16"
            android:paddingBottom="10dp"
            android:paddingTop="6dp"
            android:textColor="@color/color_accent"
            android:textIsSelectable="true"
            android:textSize="18sp"
            tools:text="Dunkirk" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/userprofilepopup_header"
        android:layout_alignStart="@+id/userprofilepopup_header"
        android:layout_below="@+id/userprofilepopup_header"
        android:orientation="vertical">

        <ViewFlipper
            android:id="@+id/userprofilepopup_stats_viewflipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inAnimation="@anim/fade_in_300"
            android:outAnimation="@anim/fade_out_300">

            <LinearLayout
                android:id="@+id/userprofilepopup_stats_container"
                android:layout_width="match_parent"
                android:paddingEnd="@dimen/spacing16"
                android:paddingStart="@dimen/spacing16"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacing16"
                android:paddingTop="@dimen/spacing12">

                <LinearLayout style="@style/MovieAppMovieDetailPopupStatsContainer">

                    <TextView
                        android:id="@+id/moviedetailpopup_rating"
                        style="@style/MovieAppMovieDetailPopupStatsValue"
                        tools:text="7.4" />

                    <TextView
                        style="@style/MovieAppMovieDetailPopupStatsLabel"
                        android:text="@string/popup_movie_detail_rating" />
                </LinearLayout>

                <LinearLayout style="@style/MovieAppMovieDetailPopupStatsContainer">

                    <TextView
                        android:id="@+id/moviedetailpopup_year_released"
                        style="@style/MovieAppMovieDetailPopupStatsValue"
                        tools:text="2017" />

                    <TextView
                        style="@style/MovieAppMovieDetailPopupStatsLabel"
                        android:text="@string/popup_movie_detail_released" />
                </LinearLayout>

                <LinearLayout style="@style/MovieAppMovieDetailPopupStatsContainer">

                    <TextView
                        android:id="@+id/moviedetailpopup_runtime"
                        style="@style/MovieAppMovieDetailPopupStatsValue"
                        tools:text="1h 47m" />

                    <TextView
                        style="@style/MovieAppMovieDetailPopupStatsLabel"
                        android:text="@string/popup_movie_detail_runtime" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/userprofilepopup_stats_load_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dialog_background">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white_opacity_40" />
            </FrameLayout>

<!--            <TextView-->
<!--                android:id="@+id/userprofilepopup_stats_load_error_message"-->
<!--                style="@style/ErrorStateMessage"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_margin="0dp"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:gravity="center"-->
<!--                tools:text="Failed to load profile. Tap to retry." />-->
        </ViewFlipper>

        <View style="@style/MovieAppSeparator.VerticalContent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/userprofilepopup_send_private_message"
                style="@style/MovieAppButton.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/spacing16"
                android:paddingStart="@dimen/spacing16"
                android:text="@string/popup_movie_detail_add_to_watchlist" />

            <View style="@style/MovieAppSeparator.HorizontalContent" />

            <Button
                android:id="@+id/userprofilepopup_view_full_profile"
                style="@style/MovieAppButton.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/spacing16"
                android:paddingStart="@dimen/spacing16"
                android:text="@string/popup_movie_detail_more_info" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
